# cookiecutter-py

./: .bandit  .commitlint.config.js  .commitlint.config.mjs  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Justfile  LICENSE  README.md  _typos.toml  bandit.yaml  cookiecutter.json  pyproject.toml  setup.cfg  tox.ini
.github/: dependabot.yml  labeler.yml  release-drafter.yml
.github/workflows/: auto-approve-merge-dependabot.yml  ci.yml  claude-code-review.yml  claude.yml  codeql-analysis.yml  commitlint.yml  docs.yml  hadolint.yml  pr-labeler.yml  pr-size-labeler.yml  publish.yml  release-drafter.yml  trufflehog.yml
cookiecutter_py/: __init__.py
docs/: conf.py  index.rst
hooks/: post_gen_project.py  pre_gen_project.py
latest/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
latest/_sources/sources/: cookiecutter_py.rst.txt  modules.rst.txt
latest/sources/: cookiecutter_py.html  modules.html
tests/: conftest.py  test_cookiecutter_generation.py  test_hooks.py  test_utils.py
{{cookiecutter.module_name}}/: .konchrc  AUTHORS.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  requirements.txt  setup.py  tox.ini
{{cookiecutter.module_name}}/docs/: Makefile  conf.py  index.rst  make.bat
{{cookiecutter.module_name}}/etc/: {{cookiecutter.module_name}}.yml
{{cookiecutter.module_name}}/tests/: test_{{ cookiecutter.module_name }}.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/: __init__.py  {{ cookiecutter.module_name }}.py
{{cookiecutter.package_name}}/: .commitlint.config.js  .coveragerc  .dockerignore  .envrc  .flake8  .gitignore  .konchrc  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  AUTHORS.rst  Dockerfile  HISTORY.rst  Justfile  LICENSE  Makefile  README.md  README.rst  _typos.toml  docker-entrypoint.sh  logging.yaml  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
{{cookiecutter.package_name}}/.github/: dependabot.yml  labeler.yml
{{cookiecutter.package_name}}/.github/workflows/: auto-approve-merge-dependabot.yml  ci.yml  codeql-analysis.yml  commitlint.yml  docs.yml  hadolint.yml  pr-labeler.yml  pr-size-labeler.yml  publish.yml  release-drafter.yml  trufflehog.yml
{{cookiecutter.package_name}}/docs/: Makefile  conf.py  index.rst  make.bat
{{cookiecutter.package_name}}/docs/getting_started/: getting_started.rst
{{cookiecutter.package_name}}/docs/roadmap/: roadmap.rst
{{cookiecutter.package_name}}/docs/todo/: todo.rst
{{cookiecutter.package_name}}/docs/usage/: usage.rst
{{cookiecutter.package_name}}/etc/: {{cookiecutter.package_name}}.yml
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py  {{ cookiecutter.package_name }}.py
{{cookiecutter.package_name}}/tests/: test_{{ cookiecutter.package_name }}.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py  {{ cookiecutter.package_name }}.py
