[tool.poetry]
name = "cookiecutter-py"
version = "0.1.0"
description = "Cookiecutter Python template"
authors = ["Ryan <ryankanno@localkinegrinds.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cookies = "^0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
