[tool.poetry]
name = "cookiecutter-py"
version = "0.1.0"
description = "Cookiecutter Python template"
authors = ["Ryan <ryankanno@localkinegrinds.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cookies = "^0.6.1"
flake8 = "^4.0.1"
black = "^22.6.0"
pre-commit = "^2.20.0"

[tool.black]
line-length = 79
skip-string-normalization = true
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.direnv
     | \.eggs
     | \.git
     | \.hg
     | \.mypy_cache
     | \.nox
     | \.tox
     | \.venv
     | venv
     | \.svn
     | _build
     | buck-out
     | build
     | dist
     | __pypackages__
     | \{\{cookiecutter\.package_name\}\}\/tests
 )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
