[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.0.0"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.rst"
repository = "{{ cookiecutter.project_url }}"
keywords = []
license = "{{ cookiecutter.project_license }}"
classifiers = [
    "Programming Language :: Python",
]

[tool.poetry.dependencies]
# python = "^{{ cookiecutter.python_version }}"
structlog = "^22.3.0"

[tool.poetry.dev-dependencies]
dunamai = "^1.16.0"
ipython = "^8.10.0"
konch = "^4.2.2"
mypy = "^1.0"
pdbpp = "^0.10.0"
pre-commit = "^3.1.1"
pytest = "^7.2.1"
pytest-cov = "^4.0"
pytest-mock = "^3.1.0"
pytest-randomly = "^3.0"
pytest-xdist = "^3.2.0"
tox = "^{{ cookiecutter.tox_version }}"
black = "^23.1"
hypothesis = "^6.68.2"
mutmut = "^2.4.3"
ruff = "^0.1.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-autobuild = "^2024.4.16"
furo = "^2024.5.6"
myst-parser = {extras = ["linkify"], version = "^3.0.1"}

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "normal"
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = false
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py{{ cookiecutter.python_version|replace(".", "") }}']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.direnv
     | \.eggs
     | \.git
     | \.hg
     | \.mypy_cache
     | \.nox
     | \.tox
     | \.venv
     | venv
     | \.svn
     | _build
     | buck-out
     | build
     | dist
     | __pypackages__
     | {{cookiecutter.package_name}}\tests
 )/
)
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -n auto"
testpaths = [
    "tests",
]

[tool.coverage.run]
parallel = true
branch = true
source = ["{{ cookiecutter.package_name }}"]
omit = [
    "*/python?.?/*",
    "*/tests/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "import",
]
show_missing = true
skip_covered = false

[tool.isort]
force_grid_wrap = 0
force_single_line = true
include_trailing_comma = true
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true
known_third_party = []
default_section = "THIRDPARTY"
known_first_party = "{{ cookiecutter.package_name }}"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.vulture]
make_whitelist = true
min_confidence = 80
paths = ["{{ cookiecutter.package_name }}/", "tests/"]
sort_by_size = true

[tool.ruff]
line-length = 79
extend-exclude = ["docs"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.lint]
preview = true
select = [
    "A",    # python builtins being used as variables or parameters
    "ANN",  # annotations
    "ARG",  # unused function arguments
    "B",    # common design problems (flake8-bugbear)
    "BLE",  # blind exception catching
    "C4",   # proper comprehensions
    "C9",   # mccabe complexity
    "D",    # docstring conventions (pydocstyle)
    "D417", # missing args in docstrings
    "DTZ",  # unsafe naive datetime use (flake8-datetimez)
    "E",    # code style conventions (pycodestyle)
    "EM",   # raw literals inside exception (flake8-errmsg)
    "F",    # python source code for errors (pyflakes)
    "FIX",  # temporary developer notes (flake8-fixme)
    "FURB", # code improvements (refurb)
    "G",    # logging string formatting (flake8-logging-format)
    "LOG",  # logging module usage (flake8-logging)
    "PERF", # performance anti-patterns (perflint)
    "PGH",  # pygrep hooks
    "PIE",  # misc (flake8-pie)
    "PL",   # code errors and smells (pylint)
    "PT",   # common pytest issues
    "PTH",  # pathlib usage
    "RET",  # return statements (flake8-return)
    "RSE",  # exception raise statements (flake8-raise)
    "S",    # security testing (flake8-bandit)
    "SIM",  # code simplicity (flake8-simplify)
    "T20",  # for any print statements
    "TRY",  # exception handling anti-patterns (tryceratops)
    "UP",   # outdated syntax (pyupgrade)
    "W",    # code style conventions (pycodestyle)
]
ignore = [
    "D103",
    "D104",
]

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["S101"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
